# Invoice-OCR

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
invoice_ocr/: hooks.py  modules.txt  utils.py  verify_dep.py
invoice_ocr/invoice_ocr/doctype/invoice_upload/: invoice_upload.js  invoice_upload.json  invoice_upload.py  invoice_upload.py.save  test_invoice_upload.py
invoice_ocr/invoice_ocr/doctype/invoice_upload_item/: invoice_upload_item.json  invoice_upload_item.py
