[project]
name = "invoice_ocr"
authors = [
    { name = "mohtashim", email = "shoaibmohtashim973@gmail.com"}
]
description = "invoice ocr"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pytesseract",
    "pdf2image",
    "opencv-python-headless",
    "requests",
    "PyPDF2",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
